# BIR

./: .gitignore  Cargo.toml  LICENSE  OWNERSHIP.md  PORT_STATUS.md  README.md
crates/bd-cli/: Cargo.toml
crates/bd-cli/src/: cli.rs  context.rs  exit.rs  lib.rs  main.rs  output.rs  parse.rs
crates/bd-cli/src/commands/: advanced.rs  deps.rs  formula.rs  gate.rs  issues.rs  maintenance.rs  memory.rs  mod.rs  mol.rs  setup.rs  swarm.rs  sync.rs  views.rs
crates/bd-cli/src/doctor/: mod.rs
crates/bd-cli/src/doctor/checks/: agents.rs  core.rs  dolt.rs  federation.rs  git.rs  graph.rs  identity.rs  mod.rs  pollution.rs  runtime.rs
crates/bd-cli/src/integrations/: ado.rs  github.rs  gitlab.rs  http.rs  jira.rs  linear.rs  mod.rs  notion.rs
crates/bd-cli/tests/: ado_tracker.rs  cli.rs  contention_cli.rs  cook_cli.rs  deps_cli.rs  doctor_agents.rs  doctor_core.rs  doctor_dolt.rs  doctor_federation.rs  doctor_git.rs  doctor_graph.rs  doctor_identity.rs  doctor_pollution.rs  doctor_runtime.rs  gate_cli.rs  github_tracker.rs  gitlab_tracker.rs  issues_cli.rs  jira_tracker.rs  linear_tracker.rs  maintenance_cli.rs  memory_cli.rs  mol_cli.rs  notion_tracker.rs  swarm_cli.rs  sync_cli.rs  views_cli.rs  wiring_cli.rs
crates/bd-core/: Cargo.toml
crates/bd-core/src/: error.rs  filter.rs  idgen.rs  lib.rs  types.rs
crates/bd-dolt/: Cargo.toml
crates/bd-dolt/src/: lib.rs  schema.sql  server.rs  store.rs  vc.rs
crates/bd-dolt/tests/: server.rs  store.rs  vc.rs
crates/bd-formula/: Cargo.toml
crates/bd-formula/src/: cook.rs  eval.rs  lib.rs  parse.rs  types.rs  vars.rs
crates/bd-formula/tests/: cook.rs  real_formulas.rs
crates/bd-query/: Cargo.toml
crates/bd-query/src/: error.rs  eval.rs  lexer.rs  lib.rs  parser.rs
crates/bd-sqlite/: Cargo.toml
crates/bd-sqlite/src/: blocked.rs  lib.rs  rows.rs  schema.sql  sqlfilter.rs  store.rs  tests.rs
crates/bd-storage/: Cargo.toml
crates/bd-storage/src/: capability.rs  error.rs  lib.rs  locator.rs  stats.rs
skills/bd/: SKILL.md
