[workspace]
resolver = "3"
members = [
    "crates/bd-core",
    "crates/bd-query",
    "crates/bd-storage",
    "crates/bd-sqlite",
    "crates/bd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
repository = "https://github.com/gastownhall/beads"

[workspace.dependencies]
bd-core = { path = "crates/bd-core" }
bd-query = { path = "crates/bd-query" }
bd-storage = { path = "crates/bd-storage" }
bd-sqlite = { path = "crates/bd-sqlite" }

anyhow = "1"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive", "env", "wrap_help", "string"] }
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "json",
    "macros",
] }
async-trait = "0.1"
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
