[workspace]
resolver = "3"
members = [
    "crates/bd-core",
    "crates/bd-query",
    "crates/bd-storage",
    "crates/bd-sqlite",
    "crates/bd-dolt",
    "crates/bd-formula",
    "crates/bd-cli",
]

[workspace.package]
version = "0.1.0"
edition = "2024"
rust-version = "1.90"
license = "MIT"
# This port's own home. Upstream (github.com/gastownhall/beads) is the spec, not
# the source, and is credited as such in the README.
repository = "https://github.com/3x3xX3N0N/BIR"

[workspace.dependencies]
bd-core = { path = "crates/bd-core" }
bd-query = { path = "crates/bd-query" }
bd-storage = { path = "crates/bd-storage" }
bd-sqlite = { path = "crates/bd-sqlite" }
bd-dolt = { path = "crates/bd-dolt" }
bd-formula = { path = "crates/bd-formula" }

anyhow = "1"
base64 = "0.22"
thiserror = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
toml = "0.8"
chrono = { version = "0.4", features = ["serde"] }
futures = "0.3"
clap = { version = "4", features = ["derive", "env", "wrap_help", "string"] }
clap_complete = "4"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "process", "fs", "time", "signal"] }
sqlx = { version = "0.8", default-features = false, features = [
    "runtime-tokio",
    "sqlite",
    "chrono",
    "json",
    "macros",
] }
async-trait = "0.1"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls", "gzip"] }
sha2 = "0.10"
uuid = { version = "1", features = ["v4"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[profile.release]
opt-level = 3
lto = "thin"
strip = true
