[package]
name = "bd-cli"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true

[lib]
name = "bd_cli"
path = "src/lib.rs"

[[bin]]
name = "bd"
path = "src/main.rs"

[dependencies]
bd-core = { workspace = true }
bd-query = { workspace = true }
bd-sqlite = { workspace = true }
bd-storage = { workspace = true }
anyhow = { workspace = true }
base64 = { workspace = true }
chrono = { workspace = true }
clap = { workspace = true }
clap_complete = { workspace = true }
reqwest = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
serde_yaml = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
